Adjusted contact page to certificate page, added images

--- a/home.html
+++ b/home.html
@@ -12,11 +12,11 @@
         <nav>
             <a href="./home.html">Home</a>
             <a href="./portfolio.html">Portfolio</a>
-            <a href="./contact.html">Contact</a>
+            <a href="./certificates.html">Certificates</a>
         </nav>
         <h1>Adam Princiotta</h1>
         <h2>Software Engineer</h2>
-        <img alt="Picture of Adam">
+        <img  src="./images/Adam.jpg" alt="Picture of Adam">
         <p>Welcome to my portfolio! I am a software engineer who has experience with Javascript, HTML, CSS, SQL, Java, C++, and Python. I have worked on multiple personal projects in the form of websites, and have worked with Python code in my current job as a software engineer lead. I am always looking to learn more and grow in my coding experience.</p>
         <section>
             <h2>Education</h2>
