--- a/portfolio.html
+++ b/portfolio.html
@@ -12,25 +12,29 @@
         <nav>
             <a href="./home.html">Home</a>
             <a href="./portfolio.html">Portfolio</a>
-            <a href="./contact.html">Contact</a>
+            <a href="./certificates.html">Certificates</a>
         </nav>
         <h1>Portfolio</h1>
         <section>
             <h2>Projects</h2>
             <div>
                 <h4>Music vs Speech ML Models</h4>
+                <img src="./images/ML.png" alt="Music vs Speech Model Results">
                 <p>Created a series of machine learning models that accurately determines if audio files are speech or music. Using a large dataset, the CNN model was able to achieve 99.4% accuracy </p>
             </div>
             <div>
                 <h4>Database Project</h4>
+                <img src="./images/OMO.png" alt="Database Website">
                 <p>Created an online video database for keeping track of combinations of characters and teams for a fighting game. It allowed users to search for videos including the characters and/or teams they wanted to watch, so they could learn.</p>
             </div>
             <div>
                 <h4>Recreation of Business Website</h4>
+                <img src="./images/ACR.png" alt="Recreated Business Website">
                 <p>As a personal challenge, I recreated a company's website that I know.</p>
             </div>
             <div>
                 <h4>Gallery website</h4>
+                <img src="./images/Gallery.png" alt="Gallery Website">
                 <p>Created a gallery website for a customer showcasing his work. It is currently used in combination with his main company website</p>
             </div>
         </section>
