CSS updates, some animations progress. Need to update certificates page to link to my certificates

--- a/certificates.html
+++ b/certificates.html
@@ -6,7 +6,7 @@
         <title>Contact</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
         <nav>
@@ -14,8 +14,9 @@
             <a href="./portfolio.html">Portfolio</a>
             <a href="./certificates.html">Certificates</a>
         </nav>
+        <h1>Certificates</h1>
+
         <section>
-        <h2>Certificates</h2>
             <ul>
                 <li>Responsive Web Design - FreeCodeCamp</li>
                 <li>Supervised Machine Learning: Regression and Classification - Deeplearning.ai, Standford Online</li>
