--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <nav>
@@ -15,8 +15,8 @@
             <a href="./certificates.html">Certificates</a>
         </nav>
         <h1>Portfolio</h1>
-        <section>
-            <h2>Projects</h2>
+        <h2>Projects</h2>
+        <section class="projects">
             <div>
                 <h4>Music vs Speech ML Models</h4>
                 <img src="./images/ML.png" alt="Music vs Speech Model Results">
