--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
         <title>Adam Princiotta's Portfolio</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
         <nav>
@@ -14,11 +14,15 @@
             <a href="./portfolio.html">Portfolio</a>
             <a href="./certificates.html">Certificates</a>
         </nav>
-        <h1>Adam Princiotta</h1>
-        <h2>Software Engineer</h2>
-        <img  src="./images/Adam.jpg" alt="Picture of Adam">
-        <p>Welcome to my portfolio! I am a software engineer who has experience with Javascript, HTML, CSS, SQL, Java, C++, and Python. I have worked on multiple personal projects in the form of websites, and have worked with Python code in my current job as a software engineer lead. I am always looking to learn more and grow in my coding experience.</p>
         <section>
+            <img  src="./images/Adam.jpg" alt="Picture of Adam">
+            <div class="intro">
+                <h1>Adam Princiotta</h1>
+                <h2>Software Engineer</h2>
+            </div>
+        </section>
+        <p>Welcome to my portfolio! I am a software engineer who has experience with Javascript, HTML, CSS, SQL, Java, C++, and Python. I have worked on multiple personal projects in the form of websites, and have worked with Python code in my current job as a software engineer lead. I am always looking to learn more and grow in my coding experience.</p>
+        <section class="education">
             <h2>Education</h2>
             <p>
                 <strong>Undergraduate degree:</strong><em> B.S. Computer Science with a Minor in Mathematics</em><br>
