Added attempt at spinning text

--- a/certificates.html
+++ b/certificates.html
@@ -14,7 +14,7 @@
             <a href="./portfolio.html">Portfolio</a>
             <a href="./certificates.html">Certificates</a>
         </nav>
-        <h1>Certificates</h1>
+        <div class="certificates">Certificates</div>
 
         <section>
             <ul>
