--- a/certificates.html
+++ b/certificates.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <nav>
-            <a href="./home.html">Home</a>
+            <a href="./index.html">Home</a>
             <a href="./portfolio.html">Portfolio</a>
             <a href="./certificates.html">Certificates</a>
         </nav>
