Animation adjustments, minor tweaks, and accessibility updates

--- a/certificates.html
+++ b/certificates.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Contact</title>
+        <title>Certificates</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./styles.css">
@@ -18,13 +18,13 @@
 
         <section>
             <ul>
-                <li>Responsive Web Design - FreeCodeCamp</li>
-                <li>Supervised Machine Learning: Regression and Classification - Deeplearning.ai, Standford Online</li>
-                <li>Machine Learning Basics - Sungkyunkwan University</li>
-                <li>Exploratory Data Analysis for Machine Learning - IBM</li>
-                <li>Python Basics - University of Michigan</li>
-                <li>Programming in Python - Meta</li>
-                <li>Machine Learning with Python - IBM</li>
+                <li><a href="https://www.freecodecamp.org/certification/fccd18cdd98-40b2-4db2-96e3-cbec2baded56/responsive-web-design" target="_blank">Responsive Web Design - FreeCodeCamp</a></li>
+                <li><a href="https://www.coursera.org/account/accomplishments/certificate/ERTN2PYQ77J4" target="_blank">Supervised Machine Learning: Regression and Classification - Deeplearning.ai, Standford Online</a></li>
+                <li><a href="https://www.coursera.org/account/accomplishments/certificate/SNE7PR5D3QVU" target="_blank">Machine Learning Basics - Sungkyunkwan University</a></li>
+                <li><a href="https://www.coursera.org/account/accomplishments/certificate/PKDEYAZ5FEJZ" target="_blank">Exploratory Data Analysis for Machine Learning - IBM</a></li>
+                <li><a href="https://www.coursera.org/account/accomplishments/certificate/SZZ6V3QZGC3A" target="_blank">Python Basics - University of Michigan</a></li>
+                <li><a href="https://www.coursera.org/account/accomplishments/certificate/L8N3BKCJH8EK" target="_blank">Programming in Python - Meta</a></li>
+                <li><a href="https://www.coursera.org/account/accomplishments/certificate/DP2NAD3HVWC4" target="_blank">Machine Learning with Python - IBM</a></li>
             </ul>
         </section>
     </body>
