--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Adam Princiotta's Portfolio</title>
+        <title>About Me</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./styles.css">
@@ -30,5 +30,4 @@
             </p>
         </section>
     </body>
->>>>>>> 3e7e1ed9e71263ce1cbe73b64e7153e23eddc617:index.html
 </html>
