Minor tweak to make it so the certificate links are clickable on the whole list item rather than the text only

--- a/certificates.html
+++ b/certificates.html
@@ -18,13 +18,13 @@
 
         <section>
             <ul>
-                <li><a href="https://www.freecodecamp.org/certification/fccd18cdd98-40b2-4db2-96e3-cbec2baded56/responsive-web-design" target="_blank">Responsive Web Design - FreeCodeCamp</a></li>
-                <li><a href="https://www.coursera.org/account/accomplishments/certificate/ERTN2PYQ77J4" target="_blank">Supervised Machine Learning: Regression and Classification - Deeplearning.ai, Standford Online</a></li>
-                <li><a href="https://www.coursera.org/account/accomplishments/certificate/SNE7PR5D3QVU" target="_blank">Machine Learning Basics - Sungkyunkwan University</a></li>
-                <li><a href="https://www.coursera.org/account/accomplishments/certificate/PKDEYAZ5FEJZ" target="_blank">Exploratory Data Analysis for Machine Learning - IBM</a></li>
-                <li><a href="https://www.coursera.org/account/accomplishments/certificate/SZZ6V3QZGC3A" target="_blank">Python Basics - University of Michigan</a></li>
-                <li><a href="https://www.coursera.org/account/accomplishments/certificate/L8N3BKCJH8EK" target="_blank">Programming in Python - Meta</a></li>
-                <li><a href="https://www.coursera.org/account/accomplishments/certificate/DP2NAD3HVWC4" target="_blank">Machine Learning with Python - IBM</a></li>
+                <a href="https://www.freecodecamp.org/certification/fccd18cdd98-40b2-4db2-96e3-cbec2baded56/responsive-web-design" target="_blank"><li>Responsive Web Design - FreeCodeCamp</li></a>
+                <a href="https://www.coursera.org/account/accomplishments/certificate/ERTN2PYQ77J4" target="_blank"><li>Supervised Machine Learning: Regression and Classification - Deeplearning.ai, Standford Online</li></a>
+                <a href="https://www.coursera.org/account/accomplishments/certificate/SNE7PR5D3QVU" target="_blank"><li>Machine Learning Basics - Sungkyunkwan University</li></a>
+                <a href="https://www.coursera.org/account/accomplishments/certificate/PKDEYAZ5FEJZ" target="_blank"><li>Exploratory Data Analysis for Machine Learning - IBM</li></a>
+                <a href="https://www.coursera.org/account/accomplishments/certificate/SZZ6V3QZGC3A" target="_blank"><li>Python Basics - University of Michigan</li></a>
+                <a href="https://www.coursera.org/account/accomplishments/certificate/L8N3BKCJH8EK" target="_blank"><li>Programming in Python - Meta</li></a>
+                <a href="https://www.coursera.org/account/accomplishments/certificate/DP2NAD3HVWC4" target="_blank"><li>Machine Learning with Python - IBM</li></a>
             </ul>
         </section>
     </body>
